--- a/index.html
+++ b/index.html
@@ -112,56 +112,44 @@
 
     <!-- About Section -->
     <section id="about" class="section about">
-
       <div class="container">
-
         <div class="row gy-3">
-
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
             <img src="assets/img/about-img.webp" alt="" class="img-fluid">
           </div>
-
           <div class="col-lg-6 d-flex flex-column justify-content-center" data-aos="fade-up" data-aos-delay="200">
             <div class="about-content ps-0 ps-lg-3">
-              <h3>Membangun Jejak Digital yang Kuat Bersama PixxelPro Digital</h3>
+              <h3>Bangun Jejak Digital Profesional bersama PixxelPro</h3>
               <p class="fst-italic">
-                PixxelPro Digital adalah mitra strategis bagi pesantren, sekolah, UMKM, dan yayasan yang ingin tampil
-                profesional di dunia digital. Kami percaya bahwa setiap lembaga berhak memiliki website yang modern,
-                cepat, dan mudah diakses.
+                Kami hadir sebagai mitra digital bagi pesantren, sekolah, UMKM, dan yayasan untuk tampil modern dan
+                terpercaya.
               </p>
               <ul>
                 <li>
                   <i class="bi bi-diagram-3"></i>
                   <div>
-                    <h4>Solusi Website Lengkap dan Profesional</h4>
-                    <p>Kami membantu Anda dari perencanaan hingga peluncuran website — untuk kebutuhan pendidikan,
-                      bisnis, hingga profil lembaga.</p>
+                    <h4>Solusi Website Lengkap</h4>
+                    <p>Dari perencanaan hingga peluncuran untuk kebutuhan pendidikan, bisnis, dan profil lembaga.</p>
                   </div>
                 </li>
                 <li>
                   <i class="bi bi-fullscreen-exit"></i>
                   <div>
-                    <h4>Desain Responsif & Ramah Pengguna</h4>
-                    <p>Website Anda akan tampil optimal di semua perangkat — mulai dari HP, tablet, hingga desktop —
-                      demi pengalaman pengguna terbaik.</p>
+                    <h4>Desain Responsif</h4>
+                    <p>Website optimal di HP, tablet, maupun desktop.</p>
                   </div>
                 </li>
               </ul>
               <p>
-                PixxelPro Digital berkomitmen mendukung dunia pendidikan dan pelaku usaha melalui solusi digital yang
-                telah terbukti digunakan oleh berbagai institusi di Indonesia.
+                Kami mendukung transformasi digital lewat layanan yang telah dipercaya berbagai lembaga di Indonesia.
               </p>
               <p>
-                Pelajari lebih lanjut tentang visi, layanan, dan pengalaman kami di <a href="about.html">halaman profil
-                  PixxelPro Digital</a>.
+                Kenali kami lebih lanjut di <a href="about.html">profil PixxelPro Digital</a>.
               </p>
             </div>
           </div>
-
         </div>
-
       </div>
-
     </section>
     <!-- /About Section -->
 
@@ -229,9 +217,8 @@
 
       <!-- Section Title -->
       <div class="container section-title">
-        <h2>Portfolio PixxelPro Digital</h2>
-        <p>Proyek-proyek unggulan termasuk hasil kolaborasi bersama peserta magang yang kami bimbing untuk menciptakan
-          solusi digital terbaik untuk berbagai lembaga.</p>
+        <h2>Portfolio</h2>
+        <p>Kumpulan proyek unggulan hasil kerja tim dan bimbingan peserta magang.</p>
       </div><!-- End Section Title -->
 
       <div class="container" id="portfolio" data-aos="fade-up" data-aos-delay="100">
@@ -433,8 +420,7 @@
       <!-- Section Title -->
       <div class="container section-title">
         <h2>Pertanyaan yang Sering Diajukan</h2>
-        <p>Berikut beberapa pertanyaan umum seputar layanan pembuatan website dari PixxelPro Digital, berdasarkan
-          pengalaman kami melayani berbagai kebutuhan bisnis dan perusahaan.</p>
+        <p>Jawaban atas pertanyaan umum tentang layanan website kami.</p>
       </div><!-- End Section Title -->
 
 
@@ -449,10 +435,8 @@
               <div class="faq-item">
                 <h3>Berapa lama proses pembuatan website?</h3>
                 <div class="faq-content">
-                  <p>Waktu pengerjaan tergantung pada jenis dan kompleksitas website. Rata-rata website profil lembaga
-                    seperti <a href="https://www.guruhebatkediri.org/" target="_blank">GuruHebatKediri.org</a>
-                    diselesaikan
-                    dalam 5–10 hari kerja.</p>
+                  <p>Waktu pengerjaan menyesuaikan dengan jenis dan kompleksitas website. Untuk website profil lembaga,
+                    rata-rata selesai dalam 5–10 hari kerja.</p>
                 </div>
                 <i class="faq-toggle bi bi-chevron-right"></i>
               </div><!-- End Faq item-->
@@ -619,9 +603,7 @@
       <!-- Section Title -->
       <div class="container section-title">
         <h2>Klien Kami</h2>
-        <p>Beragam lembaga dan pelaku usaha telah mempercayakan kebutuhan digital mereka kepada PixxelPro Digital,
-          termasuk website inspiratif seperti <a href="https://www.guruhebatkediri.org/"
-            target="_blank">GuruHebatKediri.org</a>.</p>
+        <p>Berbagai lembaga dan pelaku usaha telah mempercayakan kebutuhan digital mereka kepada PixxelPro Digital.</p>
       </div><!-- End Section Title -->
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
@@ -713,7 +695,8 @@
               </div>
 
               <div class="cta-action mt-5">
-                <a href="https://wa.me/62895639068080?text=Halo%20PixxelPro%2C%20saya%20ingin%20konsultasi.%0ASilakan%20pilih%20layanan%20yang%20Anda%20butuhkan%3A%0A1.%20Website%20UMKM%0A2.%20Website%20Sekolah%0A3.%20Portofolio%0AKetik%20nomornya%20ya." class="btn btn-primary btn-lg" target="_blank">
+                <a href="https://wa.me/62895639068080?text=Halo%20PixxelPro%2C%20saya%20ingin%20konsultasi.%0ASilakan%20pilih%20layanan%20yang%20Anda%20butuhkan%3A%0A1.%20Website%20UMKM%0A2.%20Website%20Sekolah%0A3.%20Portofolio%0AKetik%20nomornya%20ya."
+                  class="btn btn-primary btn-lg" target="_blank">
                   Hubungi Kami
                 </a>
                 <a href="service.html" class="btn btn-outline-primary btn-lg">Lihat Service</a>
